<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkerBg"
    tools:context=".ui.homeFragment.bottomSheetFragment.HomeBottomSheet">

    <TextView
        android:id="@+id/changeSubredditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/recommended_subreddit"
        android:textColor="@color/mediumGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/memeType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeSubredditTxt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/memeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/meme"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/meme"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meme" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dankmeme"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dankmeme" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/okbuddyretard"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okbuddyretard"
                    android:textAllCaps="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/comedymemes"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comedymemes"
                    android:textAllCaps="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pewdiepiesubmissions"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pewdiepiesubmissions"
                    android:textAllCaps="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dankinindia"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dankinindia"
                    android:textAllCaps="false" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/memeType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/change_subreddit"
        android:textColor="@color/mediumGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeType_scrollView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSubredditLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:hint="Subreddit Name"
        android:textColorHint="@color/darker"
        app:boxStrokeColor="@color/darker"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/darker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeType_txt"
        app:placeholderTextColor="@color/darker">

        <EditText
            android:id="@+id/subredditEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:cursorVisible="true"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@color/darker" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubredditLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>